Fix text alignment on page.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,25 +1,28 @@
 body {
   background-color: black;
-  text-align: center;
 }
 p {
   color: aquamarine;
   font-size: 16px;
+  text-align: center;
 }
 h1 {
   font-family: Verdana;
   font-weight: normal;
   font-style: 50px;
   color: white;
+  text-align: center;
 }
 h2 {
   font-family: Verdana;
   font-size: 21px;
   color: gray;
+  text-align: center;
 }
 a {
   text-decoration: none;
   color: aquamarine;
+  text-align: center;
 }
 .copyright {
   text-align: right;
